# diffusion_lam

./: .gitignore  example_data.py  pyproject.toml  test.py
diffusion_lam/: __init__.py  data_module.py  scheduler.py  trainer.py  utils.py
diffusion_lam/model/: __init__.py  mlp.py  score_model.py
diffusion_lam/utils/: attr_dict.py  utils.py
dlam/: __init__.py  data.py  data_module.py  logger.py  mlops.py  samplers.py  toy_data.py  trainer.py
dlam/data/: toy_data.py  weather_dataset.py
dlam/evaluate/: evaluate_toy.py  evaluate_weather.py
dlam/model/: __init__.py  aunet.py  ddpm.py  dpm_solve.py  edm.py  edm_.py  ema.py  embedding.py  erik_ddpm.py  graph_lam.py  hi_lam.py  interaction_net.py  mlp.py  noise_model.py  noise_schedule.py  score_model.py  unet.py
dlam/utils/: __init__.py  attrdict.py  calculate_states_stats.py  utils.py
dlam/vis/: __init__.py  animate.py  vis2d.py
experiments/mini_weather/: eval.config.yaml  train.config.yaml
experiments/simple/: data.config.yaml  datastore.yaml  train.config.yaml  train.yaml
experiments/test/: train.yaml
experiments/toy_example/: toy.config.yaml
scripts/: create_graph.py  dummy.py  ensemble_forecast.py  eval_wm.py  forecast.py  gen_forecast.py  generate_example_dataset.py  pmodel.py  ptrain.py  sample.py  train.py
test/: conftest.py  test_data.py  test_scheduler.py  test_trainer.py
test/resources/: batch.pkl  data_config.yaml  edge_index.pkl
test/test_model/: test_ddpm.py  test_interaction_net.py  test_neural_lam_models.py  test_noise_schedule.py  (+1 more)
test_script/: config.yaml  test_ds.py
(+262 files in other folders)
