[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion_lam"
version = "0.1.0"
description = "Diffusion LAM"
authors = [{ name = "Mathias Schreiner", email = "matschreiner@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "torch",
]

[tool.setuptools]
packages = ["diffusion_lam"]

