[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlam"
version = "0.1.0"
description = "Diffusion LAM"
authors = [{ name = "Mathias Schreiner", email = "matschreiner@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "torch",
    "pytorch_lightning",
    "xarray",
    "cftime",
    "zarr",
    'matplotlib',
    'einops'
]

[tool.setuptools]
packages = ["dlam"]

